--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.room:room-runtime:2.5.1'
+    implementation 'androidx.room:room-runtime:2.5.1' // Replace with the latest version
+    annotationProcessor 'androidx.room:room-compiler:2.5.1' // Replace with the latest version
     implementation 'androidx.room:room-common:2.5.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
