--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,6 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".SettingsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AddNewContactActivity"
-            android:exported="false" />
-        <activity
             android:name=".Login.LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -35,7 +29,16 @@
             android:name=".Contacts.ContactsActivity"
             android:exported="false" />
         <activity
+            android:name=".Chat.ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".Register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddNewContactActivity"
             android:exported="false" />
     </application>
 
