--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".MyApplication"
@@ -18,16 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
-     See README(https://goo.gl/l4GJaQ) for more. -->
         <meta-data
-            android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_logout" />
-        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
-             notification message. See README(https://goo.gl/6BKBk7) for more. -->
-        <meta-data
-            android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/blue_shade_1" />
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="any_value" />
 
         <service
             android:name=".Services.ReceiveMessages"
@@ -45,7 +39,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -54,7 +47,9 @@
             android:exported="false" />
         <activity
             android:name=".Chat.ChatActivity"
-            android:exported="false" />
+            android:exported="true">
+        </activity>
+
         <activity
             android:name=".Register.RegisterActivity"
             android:exported="false" />
