--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:name=".MyApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +18,7 @@
         android:theme="@style/Theme.STF"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
